my second part commit

--- a/index.html
+++ b/index.html
@@ -59,6 +59,49 @@
                 </div>
             </div>
         </section>
+        <section>
+            <p class="title">The Vision of Future</p>
+            <p>
+                Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.
+            </p>
+            <div class="card_holder vision">
+                <div class="card v-card1 ">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="fi">Digital Transformation</h4>
+                    <p>Creating a nationwide digital ecosystem to
+                        enhance connectivity and access to services for
+                        all citizens.</p>
+                    <a href="#" class="v-btn1 v_btn">Learn More</a>
+                </div>
+                <div class="card v-card2 ">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="fi">Green energy</h4>
+                    <p>Investments in solar and wind energy to ensure
+                        a sustainable and eco-friendly future.</p>
+                    <a href="#" class="v-btn2 v_btn">Learn More</a>
+                </div>
+                <div class="card v-card3 ">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="fi">Modern Infrastructure</h4>
+                    <p>
+                        Building state-of-the-art infrastructure to support
+                        economic growth and global competitiveness.</p>
+                    <a href="#" class="v-btn3 v_btn">Learn More</a>
+                </div>
+            </div>
+
+        </section>
+        <section class="card testimonial">
+            <p class="quote">
+                To overcome poverty and the flaws of the economic crisis in our society, we need to envision our social life. We have to free our mind, imagine what has never happened before and write social fiction. We need to imagine things to make them happen. If you don't imagine, it will never happen.
+                All human beings are born entrepreneurs. Some get a chance to unleash that capacity. Some never got the chance, never knew that he or she has that capacity.
+            </p>
+            <strong>Dr. Muhammad Yunus</strong>
+            <p>Chief Adviser of the People's Republic of Bangladesh</p>
+        </section>
 
     </main>
 </body>
