--- a/index.html
+++ b/index.html
@@ -102,6 +102,93 @@
             <strong>Dr. Muhammad Yunus</strong>
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
+        <section>
+            <p class="title">Your Opinion Matters</p>
+            <div class="Opinion">
+                <table border="1">
+                    <tr>
+                        <th>Question</th>
+                        <th>Select Your option</th>
+                    </tr>
+                    <tr>
+                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td><Button>Yes, I agree</Button></td>
+                    </tr>
+                    <tr>
+                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td><Button>Yes, I agree</Button></td>
+                    </tr>
+                    <tr>
+                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td><Button>Yes, I agree</Button></td>
+                    </tr>
+
+                </table>
+            </div>
+        </section>
+        <section>
+            <p class="title">Recent News</p>
+            <p>
+                Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.
+            </p>
+
+            <div class="news_holder">
+                <div class="news">
+                    <div class="news_card">
+                        <img src="assets/satelite.png" alt="">
+                        <div>
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="">
+                            <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                            <p>
+                                Not until the creation and maintenance of decent conditions of life for all people are
+                                recognized and
+                                accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="news_card">
+                        <div>
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="">
+                            <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                            <p>
+                                Not until the creation and maintenance of decent conditions of life for all people are
+                                recognized and
+                                accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                        <img src="assets/satelite.png" alt="">
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="news_card">
+                        <img src="assets/satelite.png" alt="">
+                        <div>
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="">
+                            <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                            <p>
+                                Not until the creation and maintenance of decent conditions of life for all people are
+                                recognized and
+                                accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 </body>
